--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     </head>
 
     <body>
-        <header>Header
         <nav class="navbar">
-            <div class="logo"></div>
+            <a href="index.html" class="logo">
+                <span class="first-name">Italo</span>
+                <span class="last-name">Dantas</span>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Sobre</a></li>
@@ -18,7 +19,29 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-    </header>
+
+        <!-- Seção Home -->
+    <section class="home">
+        <div class="intro">
+            <h1>Bem-vindo ao meu Portfólio</h1>
+            <p>Desenvolvedor focado em Python e Web com React</p>
+        </div>
+        <div class="skills-container">
+            <!-- Divisão para Python -->
+            <div class="skill python">
+                <h2>Python</h2>
+                <p>Automação, Análise de Dados, Desenvolvimento Backend</p>
+                <a href="#" class="btn">Saiba Mais</a>
+            </div>
+            <!-- Divisão para Web com React -->
+            <div class="skill react">
+                <h2>Web com React</h2>
+                <p>Desenvolvimento Frontend com foco em interfaces modernas</p>
+                <a href="#" class="btn">Saiba Mais</a>
+            </div>
+        </div>
+    </section>
+
 
     </body>
 </html>
