--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <br>
                 <img src="img/React.png" alt="React">
                 <img src="img/TailWind.png" alt="TailWind">
-                <img src="img/node.png" alt="Node">
+                <img src="img/git.png" alt="Node">
                 <img src="img/Html1.png" alt="Html">
                 <img src="img/Css1.png" alt="Css">
                 <img src="img/JsLogo.png" alt="Js-Logo">
