--- a/projetos.html
+++ b/projetos.html
@@ -25,18 +25,18 @@
                 <h2>Meus Projetos</h2>
                 <div class="projects-grid">
                 <div class="project-card">
-                    <img style="width: 400px; border-radius: 18px;" src="/img/projetos/Site DevFolio.PNG" alt="DevFolio Bootstrap"> 
-                    <h3>DevFolio</h3>
-                    <p>Portfolio Dev na lingua inglesa</p>
+                    <img style="height: 180px; width: 400px; border-radius: 18px;" src="/img/Site Bigow.PNG" alt="DevFolio Bootstrap"> 
+                    <h3>Site Bigow</h3>
+                    <p>Site repositorio de Cupons e Cashback</p>
                     <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
                     <div class="project-links">
-                        <a href="https://github.com/ItaloDantasDev/ItaloDantas-DevFolio" target="_blank">Ver Código</a>
+                        <a href="https://github.com/ItaloDantasDev/Bigow" target="_blank">Ver Código</a>
                         <a href="https://italodantasdev.github.io/ItaloDantas-DevFolio/" target="_blank">Ver Demo</a>
                     </div>
                 </div>
 
                     <div class="project-card">
-                        <img style="width: 400px; border-radius: 18px;" src="/img/projetos/Foto Site Neural Flow.PNG" alt="DevFolio Bootstrap"> 
+                        <img style="width: 400px; border-radius: 18px;" src="/img/Foto Site Neural Flow.PNG" alt="DevFolio Bootstrap"> 
                         <h3>IA Website</h3>
                         <p>Portfolio Dev na lingua inglesa</p>
                         <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
@@ -47,7 +47,7 @@
                     </div>
 
                         <div class="project-card">
-                            <img style="width: 400px; border-radius: 18px;" src="/img/projetos/Site DevFolio.PNG" alt="DevFolio Bootstrap"> 
+                            <img style="width: 400px; border-radius: 18px;" src="/img/Site DevFolio.PNG" alt="DevFolio Bootstrap"> 
                             <h3>DevFolio</h3>
                             <p>Portfolio Dev na lingua inglesa</p>
                             <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
