Finalizacao de todas as abas
Abas concluidas

--- a/index.html
+++ b/index.html
@@ -5,25 +5,29 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Italo Dantas' Devfolio</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ruge+Boogie&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <nav id="navbar" class="navbar">
-            <a href="index.html" class="logo">
-                <span class="first-name">Italo</span>
-                <span class="last-name">Dantas</span>
-            </a>
-            <ul class="nav-links">
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
+        <div>
+            <nav id="navbar" class="navbar">
+                <a href="index.html" class="logo">
+                    <span class="first-name">Italo</span>
+                    <span class="last-name">Dantas</span>
+                </a>
+                <ul class="nav-links">
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="projetos.html">Projetos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
 
-        <!-- Seção Home -->
+    <!-- Seção Home -->
     <section class="home">
         <div class="intro">
-
             <div class="apresentacao">
                 <span class="texto-apresentacao">
                     <h1>Olá, eu sou <br><span class="nome">Italo Dantas</span> </h1>
@@ -50,5 +54,10 @@
             </div>
         </div>
     </section>
+
+    <!-- Rodapé -->
+        <footer class="footer">
+            <p>&copy; 2024 Todos os direitos reservados | Italo Dantas</p>
+        </footer>
     </body>
 </html>
