--- a/projetos.html
+++ b/projetos.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Italo Dantas' Devfolio</title>
         <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Ruge+Boogie&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -21,11 +24,11 @@
         </nav>
 
         <section class="projects-section">
-            <div class="container">
+            <div class="container-projetos">
                 <h2>Meus Projetos</h2>
                 <div class="projects-grid">
                 <div class="project-card">
-                    <img style="height: 180px; width: 400px; border-radius: 18px;" src="/img/Site Bigow.PNG" alt="DevFolio Bootstrap"> 
+                    <img style="height: 190px; width: 400px; border-radius: 18px;" src="/img/Site Bigow.PNG" alt="DevFolio Bootstrap"> 
                     <h3>Site Bigow</h3>
                     <p>Site repositorio de Cupons e Cashback</p>
                     <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
@@ -38,7 +41,7 @@
                     <div class="project-card">
                         <img style="width: 400px; border-radius: 18px;" src="/img/Foto Site Neural Flow.PNG" alt="DevFolio Bootstrap"> 
                         <h3>IA Website</h3>
-                        <p>Portfolio Dev na lingua inglesa</p>
+                        <p>Website responsivo Sass de servicos de IA e Automacao</p>
                         <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
                         <div class="project-links">
                             <a href="https://github.com/ItaloDantasDev/ItaloDantas-DevFolio" target="_blank">Ver Código</a>
@@ -56,7 +59,12 @@
                                 <a href="https://italodantasdev.github.io/ItaloDantas-DevFolio/" target="_blank">Ver Demo</a>
                             </div>
                         </div>
+            </section>
 
+    <!-- Rodapé -->
+    <footer class="footer">
+        <p> &copy; 2024 Todos os direitos reservados | Italo Dantas</p>
+    </footer>
 
 
 
