--- a/sobre.html
+++ b/sobre.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Italo Dantas' Devfolio</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
 
-    <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Italo Dantas' Devfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ruge+Boogie&family=Space+Grotesk:wght@300..700&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    <div>
         <nav class="navbar">
             <a href="index.html" class="logo">
                 <span class="first-name">Italo</span>
@@ -19,9 +25,29 @@
                 <li><a href="contato.html">Contato</a></li>
             </ul>
         </nav>
+    </div>
+
+
+    <section id="sobre" class="sobre-secao">
+        <div class="container-sobre">
+            <h2>Sobre Mim</h2>
+            <p>Olá! Meu nome é Ítalo Dantas, sou um desenvolvedor com experiência em Python, Docker, React, TailWind, C,
+                Java, SQL, Node, HTML, CSS e JavaScript. <br> Estou sempre em busca de novos desafios e soluções inovadoras
+                para problemas complexos. <br> Uso o Linux diariamente e venho me especializando em Cyber Security.</p>
+        </div>
+    </section>
+
+    <!-- Rodapé -->
+    <div>
+        <footer class="footer">
+            <p>&copy; 2024 Todos os direitos reservados | Italo Dantas</p>
+        </footer>
+    </div>
 
 
 
 
-    </body>
+
+</body>
+
 </html>
