--- a/projetos.html
+++ b/projetos.html
@@ -50,7 +50,7 @@
                     </div>
 
                         <div class="project-card">
-                            <img style="width: 400px; border-radius: 18px;" src="/img/Site DevFolio.PNG" alt="DevFolio Bootstrap"> 
+                            <img style="width: 400px; border-radius: 18px;" src="../img/Site DevFolio.PNG" alt="DevFolio Bootstrap"> 
                             <h3>DevFolio</h3>
                             <p>Portfolio Dev na lingua inglesa</p>
                             <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
