--- a/projetos.html
+++ b/projetos.html
@@ -28,7 +28,7 @@
                 <h2>Meus Projetos</h2>
                 <div class="projects-grid">
                 <div class="project-card">
-                    <img style="height: 190px; width: 400px; border-radius: 18px;" src="/img/Site Bigow.PNG" alt="DevFolio Bootstrap"> 
+                    <img style="height: 190px; width: 400px; border-radius: 18px;" src="./img/Site Bigow.PNG" alt="Bigow - Cupons e Cashback"> 
                     <h3>Site Bigow</h3>
                     <p>Site repositorio de Cupons e Cashback</p>
                     <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
@@ -39,7 +39,7 @@
                 </div>
 
                     <div class="project-card">
-                        <img style="width: 400px; border-radius: 18px;" src="/img/Foto Site Neural Flow.PNG" alt="DevFolio Bootstrap"> 
+                        <img style="width: 400px; border-radius: 18px;" src="./img/Foto Site Neural Flow.PNG" alt="Neural Flow IA"> 
                         <h3>IA Website</h3>
                         <p>Website responsivo Sass de servicos de IA e Automacao</p>
                         <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
@@ -50,7 +50,7 @@
                     </div>
 
                         <div class="project-card">
-                            <img style="width: 400px; border-radius: 18px;" src="../img/Site DevFolio.PNG" alt="DevFolio Bootstrap"> 
+                            <img style="width: 400px; border-radius: 18px;" src="./img/Site DevFolio.PNG" alt="DevFolio Bootstrap"> 
                             <h3>DevFolio</h3>
                             <p>Portfolio Dev na lingua inglesa</p>
                             <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
