Added NodJs Icon

--- a/index.html
+++ b/index.html
@@ -39,14 +39,15 @@
                 <h1>Skills</h1>
                 <div class="galeria">
                 <img src="img/Python.png" alt="Python">
-                <img src="img/Docker.png" alt="Docker">
                 <img src="img/C.png" alt="Linguagem C">
                 <img src="img/Java.png" alt="Java">
+                <img src="img/git.png" alt="Node">
                 <img src="img/SQL.jpeg" alt="Sql">
+                <img src="img/Docker.png" alt="Docker">
                     <br>
                 <img src="img/React.png" alt="React">
+                <img src="img/node-js.svg" alt="Node">
                 <img src="img/TailWind.png" alt="TailWind">
-                <img src="img/git.png" alt="Node">
                 <img src="img/Html1.png" alt="Html">
                 <img src="img/Css1.png" alt="Css">
                 <img src="img/JsLogo.png" alt="Js-Logo">
