Added NodeJs Icon

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="img/Docker.png" alt="Docker">
                     <br>
                 <img src="img/React.png" alt="React">
-                <img src="img/node-js.svg" alt="Node">
+                <img src="img/node.png" alt="Node">
                 <img src="img/TailWind.png" alt="TailWind">
                 <img src="img/Html1.png" alt="Html">
                 <img src="img/Css1.png" alt="Css">
