--- a/projetos.html
+++ b/projetos.html
@@ -1,72 +1,95 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Italo Dantas' Devfolio</title>
-        <link rel="stylesheet" href="styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Ruge+Boogie&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    </head>
 
-    <body>
-        <nav class="navbar">
-            <a href="index.html" class="logo">
-                <span class="first-name">Italo</span>
-                <span class="last-name">Dantas</span>
-            </a>
-            <ul class="nav-links">
-                <li><a href="sobre.html">Sobre</a></li>
-                <li><a href="projetos.html">Projetos</a></li>
-                <li><a href="contato.html">Contato</a></li>
-            </ul>
-        </nav>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Italo Dantas' Devfolio</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Ruge+Boogie&family=Space+Grotesk:wght@300..700&display=swap"
+        rel="stylesheet">
+</head>
 
-        <section class="projects-section">
-            <div class="container-projetos">
-                <h2>Meus Projetos</h2>
-                <div class="projects-grid">
-                <div class="project-card">
-                    <img style="height: 190px; width: 400px; border-radius: 18px;" src="./img/Site Bigow.PNG" alt="Bigow - Cupons e Cashback"> 
-                    <h3>Site Bigow</h3>
-                    <p>Site repositorio de Cupons e Cashback</p>
-                    <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
-                    <div class="project-links">
-                        <a href="https://github.com/ItaloDantasDev/Bigow" target="_blank">Ver Código</a>
-                        <a href="https://italodantasdev.github.io/ItaloDantas-DevFolio/" target="_blank">Ver Demo</a>
-                    </div>
-                </div>
+<body>
+    <div class="wrapper">
+        <header>
+            <nav id="navbar" class="navbar">
+                <a href="index.html" class="logo">
+                    <span class="first-name">Italo</span>
+                    <span class="last-name">Dantas</span>
+                </a>
+                <ul class="nav-links">
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="projetos.html">Projetos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
 
-                    <div class="project-card">
-                        <img style="width: 400px; border-radius: 18px;" src="./img/Foto Site Neural Flow.PNG" alt="Neural Flow IA"> 
-                        <h3>IA Website</h3>
-                        <p>Website responsivo Sass de servicos de IA e Automacao</p>
-                        <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
-                        <div class="project-links">
-                            <a href="https://github.com/ItaloDantasDev/ItaloDantas-DevFolio" target="_blank">Ver Código</a>
-                            <a href="https://italodantasdev.github.io/ItaloDantas-DevFolio/" target="_blank">Ver Demo</a>
+        <main>
+            <section class="projects-section">
+                <div class="container-projetos">
+                    <a href="https://github.com/ItaloDantasDev?tab=repositories"><h2>Meus Projetos</h2></a>
+                    <div class="projects-grid">
+                        <div class="project-card">
+                            <a href="https://italodantasdev.github.io/Bigow/"><img
+                                    style="height: 190px; width: 400px; border-radius: 18px;" src="./img/Site Bigow.PNG"
+                                    alt="Bigow - Cupons e Cashback"> </a>
+                            <h3>Site Bigow</h3>
+                            <p>Site repositorio de Cupons e Cashback</p>
+                            <p><strong>Tecnologias:</strong> Html, Css, Figma</p>
+                            <div class="project-links">
+                                <a href="https://github.com/ItaloDantasDev/Bigow" target="_blank">Ver Código</a>
+                                <a href="https://italodantasdev.github.io/Bigow/" target="_blank">Ver Demo</a>
+                            </div>
                         </div>
-                    </div>
 
                         <div class="project-card">
-                            <img style="width: 400px; border-radius: 18px;" src="./img/Site DevFolio.PNG" alt="DevFolio Bootstrap"> 
-                            <h3>DevFolio</h3>
+                            <a href="https://italodantasdev.github.io/NeuralFlowWeb/"><img
+                                    style="width: 400px; border-radius: 18px;" src="./img/Foto Site Neural Flow.PNG"
+                                    alt="Neural Flow IA"> </a>
+                            <h3>IA Website</h3>
+                            <p>Website responsivo Sass de servicos de IA e Automacao</p>
+                            <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
+                            <div class="project-links">
+                                <a href="https://github.com/ItaloDantasDev/NeuralFlowWeb" target="_blank">Ver Código</a>
+                                <a href="https://italodantasdev.github.io/NeuralFlowWeb/" target="_blank">Ver Demo</a>
+                            </div>
+                        </div>
+
+                        <div class="project-card">
+                            <a href="https://italodantasdev.github.io/ItaloDantas-DevFolio/"><img
+                                    style="width: 400px; border-radius: 18px;" src="./img/Site DevFolio.PNG"
+                                    alt="DevFolio Bootstrap">
+                                <h3>DevFolio</h3>
+                            </a>
                             <p>Portfolio Dev na lingua inglesa</p>
                             <p><strong>Tecnologias:</strong> Html, Css, Bootstrap, Java Script</p>
                             <div class="project-links">
-                                <a href="https://github.com/ItaloDantasDev/ItaloDantas-DevFolio" target="_blank">Ver Código</a>
-                                <a href="https://italodantasdev.github.io/ItaloDantas-DevFolio/" target="_blank">Ver Demo</a>
+                                <a href="https://github.com/ItaloDantasDev/ItaloDantas-DevFolio" target="_blank">Ver
+                                    Código</a>
+                                <a href="https://italodantasdev.github.io/ItaloDantas-DevFolio/" target="_blank">Ver
+                                    Demo</a>
                             </div>
                         </div>
+                    </div>
+                </div>
             </section>
-
-    <!-- Rodapé -->
-    <footer class="footer">
-        <p> &copy; 2024 Todos os direitos reservados | Italo Dantas</p>
-    </footer>
+        </main>
 
 
+        <!-- Rodapé -->
+        <footer class="footer">
+            <p> &copy; 2024 Todos os direitos reservados | Italo Dantas</p>
+        </footer>
 
-    </body>
+
+    </div>
+
+
+
+</body>
+
 </html>
