Fixed grid layout

--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
                         <img src="img/git.png" alt="Node">
                         <img src="img/SQL.jpeg" alt="Sql">
                         <img src="img/Docker.png" alt="Docker">
-                        <br>
+                        
                         <img src="img/React.png" alt="React">
                         <img src="img/node.png" alt="Node">
                         <img src="img/TailWind.png" alt="TailWind">
                         <img src="img/Html1.png" alt="Html">
                         <img src="img/Css1.png" alt="Css">
-                        <img src="img/JsLogo.png" alt="Js-Logo">
+                        <img style="width: zoom: 23;" src="img/JsLogo.png" alt="Js-Logo">
                         </div>
                     </div>
                 </div>
